Trying to find a pile of configs that works

--- a/examples/docker-compose/dnsmasq-dhcpproxy/state/extra/etc/dnsmasq.template.conf
+++ b/examples/docker-compose/dnsmasq-dhcpproxy/state/extra/etc/dnsmasq.template.conf
@@ -1,23 +1,27 @@
 # TFTP config
-enable-tftp
+enable-tftp=eth0
 user=nbxyz
 tftp-secure
 tftp-root=/config/menus
 
-interface=eth0
-bind-dynamic
+tftp-no-blocksize # added
 
 # Only used if DHCP_RANGE_START is set, requires ENV vars changed via envsubst
 # DHCP Proxy range and enable verbose DHCP logging
-dhcp-range=${DHCP_RANGE_START},proxy,255.255.240.0
+dhcp-range=${DHCP_RANGE_START},proxy
 log-dhcp
 leasefile-ro
 
 # Prevents reusing servername and filename fields to avoid confusing old clients
-dhcp-no-override
+# dhcp-no-override
 
 # Disable multicast/broadcast discovery, and instruct client to download the boot file immediately
 dhcp-option=vendor:PXEClient,6,2b
+dhcp-option=vendor:PXEClient,3,"192.168.11.1"
+dhcp-option=vendor:PXEClient,66,192.168.11.1
+dhcp-option=vendor:PXEClient,67,"netboot.xyz.efi"
+dhcp-option=vendor:PXEClient,1,15
+dhcp-userclass=set:pxe-user,iPXE
 
 # Based on logic in https://gist.github.com/robinsmidsrod/4008017
 # iPXE sends a 175 option, checking suboptions
@@ -55,21 +59,21 @@ dhcp-match=set:rpi4,60,PXEClient:Arch:00011:UNDI:003000
 
 # Serve appropriate bootloaders for non-iPXE clients (initial PXE boot)
 # Legacy BIOS (not iPXE)
-pxe-service=tag:bios,tag:!ipxe-ok,X86PC,"Legacy BIOS",netboot.xyz-undionly.kpxe
+pxe-service=tag:bios,tag:!ipxe-ok,X86PC,"Legacy BIOS",netboot-353.xyz-undionly.kpxe,${LAN_IP}
 # UEFI 32-bit (not iPXE)
-pxe-service=tag:efi32,tag:!ipxe-ok,BC_EFI,"UEFI 32-bit",netboot.xyz.efi
+pxe-service=tag:efi32,tag:!ipxe-ok,BC_EFI,"UEFI 32-bit",netboot-1e2.xyz.efi,${LAN_IP}
 # UEFI 64-bit (not iPXE)
-pxe-service=tag:efi64,tag:!ipxe-ok,X86-64_EFI,"UEFI 64-bit",netboot.xyz.efi
+pxe-service=tag:efi64,tag:!ipxe-ok,X86-64_EFI,"UEFI 64-bit",netboot-025.xyz.efi,${LAN_IP}
 # ARM64 UEFI (not iPXE)
-pxe-service=tag:arm64-efi,tag:!ipxe-ok,ARM64_EFI,"ARM64 UEFI",netboot.xyz-arm64.efi
+pxe-service=tag:arm64-efi,tag:!ipxe-ok,ARM64_EFI,"ARM64 UEFI",netboot-bf0.xyz-arm64.efi,${LAN_IP}
 # Raspberry Pi Boot (using rpi4 tag, not iPXE)
-pxe-service=tag:rpi4,tag:!ipxe-ok,0,"Raspberry Pi Boot",netboot.xyz-rpi4-snp.efi
+pxe-service=tag:rpi4,tag:!ipxe-ok,0,"Raspberry Pi Boot",netboot-1db.xyz-rpi4-snp.efi,${LAN_IP}
 
 # DHCP Boot options for non-iPXE clients using envsubst for dynamic IP handling
-dhcp-boot=tag:bios,netboot.xyz.kpxe,,${CONTAINER_IP}
-dhcp-boot=tag:efi32,netboot.xyz.efi,,${CONTAINER_IP}
-dhcp-boot=tag:efi32-1,netboot.xyz.efi,,${CONTAINER_IP}
-dhcp-boot=tag:efi64,netboot.xyz.efi,,${CONTAINER_IP}
-dhcp-boot=tag:efi64-1,netboot.xyz.efi,,${CONTAINER_IP}
-dhcp-boot=tag:efi64-2,netboot.xyz.efi,,${CONTAINER_IP}
-dhcp-boot=tag:rpi4,netboot.xyz-rpi4-snp.efi,,${CONTAINER_IP}
+dhcp-boot=tag:bios,netboot.xyz.kpxe,,${LAN_IP}
+dhcp-boot=tag:efi32,netboot.xyz.efi,,${LAN_IP}
+dhcp-boot=tag:efi32-1,netboot.xyz.efi,,${LAN_IP}
+dhcp-boot=tag:efi64,netboot.xyz.efi,,${LAN_IP}
+dhcp-boot=tag:efi64-1,netboot.xyz.efi,,${LAN_IP}
+dhcp-boot=tag:efi64-2,netboot.xyz.efi,,${LAN_IP}
+dhcp-boot=tag:rpi4,netboot.xyz-rpi4-snp.efi,,${LAN_IP}
