--- a/examples/docker-compose/dnsmasq-dhcpproxy/docker-compose.yml
+++ b/examples/docker-compose/dnsmasq-dhcpproxy/docker-compose.yml
@@ -10,11 +10,12 @@ services:
     container_name: netbootxyz
     command: sh /extra/start.sh
     environment:
-      MENU_VERSION: "2.0.47" # optional
-      NGINX_PORT: "80" # optional
-      WEB_APP_PORT: "3000" # optional
-      TFTPD_OPTS: "--conf-file=/extra/etc/dnsmasq.conf"
-      DHCP_RANGE_START: 192.168.0.1
+      # MENU_VERSION: "2.0.47" # optional
+      # NGINX_PORT: "80" # optional
+      # WEB_APP_PORT: "3000" # optional
+      TFTPD_OPTS: "--conf-file=/extra/etc/dnsmasq.conf "
+      DHCP_RANGE_START: 192.168.11.1
+      LAN_IP: 192.168.11.1
     volumes:
       - ./state/config:/config
       - ./state/assets:/assets
